<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmContact"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top">

        <TextView
            android:id="@+id/text_view_name_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_name_1"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/date_contact"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginStart="@dimen/left"/>
        <TextView
            android:id="@+id/text_view_name_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_name_2"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="@dimen/date_contact"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginStart="@dimen/left"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginStart="@dimen/left">
        <TextView
            android:id="@+id/text_view_date_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_date_1"
            android:textStyle="bold"
            android:textSize="@dimen/date_contact"/>
        <TextView
            android:id="@+id/text_view_date_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_date_2"
            android:textStyle="bold"
            android:textSize="@dimen/date_contact"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginStart="@dimen/left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginStart="@dimen/left">
        <TextView
            android:id="@+id/text_view_phone_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_phone_1"
            android:textStyle="bold"
            android:textSize="@dimen/date_contact"/>
        <TextView
            android:id="@+id/text_view_phone_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_phone_2"
            android:textStyle="bold"
            android:textSize="@dimen/date_contact"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginStart="@dimen/left"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginStart="@dimen/left">
        <TextView
            android:id="@+id/text_view_email_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_email_1"
            android:textStyle="bold"
            android:textSize="@dimen/date_contact"/>
        <TextView
            android:id="@+id/text_view_email_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_email_2"
            android:textStyle="bold"
            android:textSize="@dimen/date_contact"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginStart="@dimen/left"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginStart="@dimen/left">
        <TextView
            android:id="@+id/text_view_description_contact_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_description_1"
            android:textStyle="bold"
            android:textSize="@dimen/date_contact"/>
        <TextView
            android:id="@+id/text_view_description_contact_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_description_2"
            android:textStyle="bold"
            android:textSize="@dimen/date_contact"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:onClick="onClick"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:layout_marginStart="@dimen/left"></Button>



</LinearLayout>